<resources>
    <string name="app_name">AreaParty</string>
    <string name="rebootHelper">即将重启电脑，此过程将无法获取监控信息。\n一旦重启成功，应用将自动获取监控信息。\n重启前请确保电脑能够开机自动登录。</string>
    <string name="autoLoginLinker">windows开机自动登录指南</string>
    //百度语音
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>

    <string name="start">开始</string>
    <string name="setting">设置</string>

    <string name="infile_default"></string>
    <string-array name="infile_list">
        <item>@string/infile_default</item>
        <item>res:///com/baidu/android/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
        <item>res:///com/baidu/android/voicedemo/offline_input.pcm, 测试离线命令词</item>
        <item>#com.baidu.android.voicedemo.recognization.inputstream.InFileStream.create16kStream(), 文件流</item>
        <item>#com.baidu.android.voicedemo.recognization.inputstream.MyMicrophoneInputStream.getInstance(), 自行从麦克风读取</item>
    </string-array>

    <string name="decoder_default"></string>
    <string-array name="decoder_list">
        <item>@string/decoder_default</item>
        <item>0, 纯在线</item>
        <item>2, 离线命令词及在线识别混合, 在线优先</item>
    </string-array>

    <string name="pid_default"></string>
    <string-array name="pid">
        <item>@string/pid_default</item>
        <item>1536, 普通话搜索模型(默认)</item>
        <item>1537, 普通话输入法模型 </item>
        <item>15361, 普通话搜索模型（在线语义） </item>
        <item>1936, 普通话远场模型 </item>
        <item>19361,普通话远场模型（在线语义） </item>
        <item>1737, 英语</item>
        <item>1637, 粤语</item>
        <item>1837, 四川话</item>
    </string-array>

    <string name="nlu_default"></string>
    <string-array name="nlu_list">
        <item>@string/nlu_default</item>
        <item>enable, 开启本地语义解析（不支持英语）</item>
        <item>enable-all, 在enable参数基础上,临时解析结果也做本地语义分析</item>
        <item>disable, 不适用语义解析</item>
    </string-array>

    <string name="vad_default"></string>
    <string-array name="vad_list">
        <item>@string/vad_default</item>
        <item>dnn, 默认，推荐模型</item>
        <item>touch,  关闭静音断句功能。用戶手动停止录音</item>
    </string-array>
    <string name="_model_default"></string>
    <string-array name="_model_list">
        <item>@string/vad_default</item>
        <item>search, 搜索模型，默认， 适用于短句， 无逗号，可以有语义</item>
        <item>input, 输入法模型，适用于长句及长语音，有逗号分割， 无语义</item>
        <item>far, 远场模型，高级，适用于音源离麦克风较远(>1m)的录音，有逗号分割， 可以有语义</item>
    </string-array>
    <string name="vad_timeout_default"></string>
    <string-array name="vad_timeout_list">
        <item>@string/vad_timeout_default</item>
        <item>0, 开启长语音（离线不支持）。建议输入法模型。</item>
        <item>800, 毫秒，静音800ms后断句，适用于输入短语</item>
        <item>2000, 毫秒，静音2000ms后断句，适用于输入长句</item>
        <item>2230, 毫秒，请修改代码中的VAD_ENDPOINT_TIMEOUT，自定义时长（建议800ms-3000ms之间）</item>
    </string-array>
    //TabHost页头
    <string name="title_section1">蓝牙设备</string>
    <string name="title_section2">其他设备</string>

    <drawable name="key_pressed">#303030</drawable>
    <drawable name="key_normal">#424242</drawable>
    <drawable name="key_sticky">#303030</drawable>
    <drawable name="black">#000000</drawable>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_in">登录</string>
    <string name="account">账户:</string>
    <string name="cancel">取消</string>
    <string name="pwd">密码:</string>
    <string name="logout">注销</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="checkcode">验证码:</string>

    <string name="service_name">自助登录服务</string>
    <string name="autoLogin1"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（1）本服务需要手机支持“悬浮窗显示”，可点击栏目上方的悬浮窗服务：<b>测试</b>尝试，如果悬浮窗没有出现，请到系统设置>应用管理(>权限管理)>AreaParty中开启悬浮窗权限（部分机型悬浮窗权限需在手机自带应用“安全中心”中开启）。（后续使用本服务时按住悬浮窗上滑可关掉悬浮窗，下滑可回到AreaParty。）</p></string>
    <string name="autoLogin2"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;（2）本服务在申请或注销账号期间需要手机支持“自助登录服务”， 如果栏目上方显示为自助登录服务：<b>未开启</b>，请点击进入设置界面后开启AreaParty 的自助登录服务权限。（申请或注销账号后也可以点击已开启进入设置界面关闭AreaParty 的自助登录服务权限。）</p></string>
    <string name="autoLogin3"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; 首先点击要申请视频应用图标后的的<b>“申请”</b>按钮打开一个对应的视频应用；然后在视频应用中跳转到用户名密码登录界面（如果应用已有账号登录，请退出原账号或进入切换账号登陆界面）；到达新用户登录界面后会弹出悬浮窗图标，单击悬浮图标系统就会为你自动分配共享VIP账号并登录（下次登录时用户就可以通过视频APP缺省直接登陆该VIP账号）。</p></string>
    <string name="info1"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;点击首页上方的<b>电脑</b>、<b>电视</b>，可以分别选择你想要连接的设备；点击<b>文件</b>可以管理本系统连接的所有存储（包括NAS硬盘、移动硬盘、U盘）上文件、并支持一键播放。</p></string>
    <string name="info2"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;点击首页中部的<b>电脑信息</b>，可以对电脑进行基本的远程管理，包括性能监控、进程管理等；点击<b>电视信息</b>，可以查看电视信息，并可点击<b>设备名称</b>为电视设备重命名。</p></string>
    <string name="info3"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本栏目支持以电视作为显示设备打开电脑上的应用程序，首次使用该功能前需要在电脑端和电视端进行初始连接设置（具体参见电脑端界面里的<b>设置管理</b>-><b>远程桌面</b>），并需要将键鼠等外设与电视连接。</p></string>
    <string name="info4"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本栏目支持以串流连接的方式直接打开电脑端的游戏软件，但需要电脑端具备GTX600显卡以上硬件支持，同时首次使用该功能前需要在电脑端和电视端进行初始连接配对设置（具体参见电脑端界面里的<b>设置管理</b>-><b>游戏串流</b>），并需要将键鼠、摇杆等外设与电视连接。</p></string>
    <string name="info5"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本栏目上部<b>新朋友</b>用于处理其他用户的加好友申请；<b>审批下载</b>用于处理好友下载我的文件的申请；<b>下载管理</b>用于管理我正在进行的下载任务。</p></string>
    <string name="info6"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;本栏目下方的<b>速传用户</b>为好友中可以点对点直传（打洞直传）文件的用户；<b>推荐用户</b>为系统中分享文件被下载成功次数排名靠前的用户。</p></string>
    <string name="info7"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;用户如果需要分享文件给好友，需要先在首页上部点击<b>文件</b>进入文件管理界面，找到相应文件后，长按对应文件，出现多选框后，勾选要分享的文件，然后在下方点击<b>更多</b> -> <b>分享</b>，分享时需要自定义文件描述信息，并可以输入该文件备份在网盘上的链接及密码（如有）。</p></string>
    <string name="info8"><p>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</p></string>

</resources>
