<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="50dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogback04">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/exittitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingBottom="10dp"
            android:paddingTop="20dp"
            android:text="说明"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cancel"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:paddingBottom="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#dcdcdc" />


        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="5dp"
            android:text="        本栏目支持AreaParty用户好友之间的交流及文件分享，用户分享的文件信息仅好友可见。"
            android:textColor="#555"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    <TextView
        android:textColor="#555"
        android:text="        点击本栏目左上角的“+”，可以输入用户名或手机号添加好友"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:textColor="#555"
        android:text="@string/info6"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:textColor="#555"
        android:text="@string/info7"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:textColor="#555"
        android:text="@string/info8"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <TextView
        android:textColor="#555"
        android:text="        本栏目中好友间下载文件时将首选点对点直传（打洞直传）方式，如果失败将转为服务器中转的方式，由于网络原因及系统资源有限，不能保证每次文件下载都能成功，请予理解。"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <Button
            android:id="@+id/exitnegativeButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/buttonback04"
            android:text="取消"
            android:textColor="#007DFF"
            android:textSize="16sp"
            android:gravity="center" />

        <Button
            android:id="@+id/exitpositiveButton"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:background="@drawable/buttonback04"
            android:text="确定"
            android:textColor="#E65757"
            android:textSize="16sp"
            android:gravity="center" />
    </LinearLayout>-->


</LinearLayout>

<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialogback04">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:gravity="center"
        android:text="帮助"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#dcdcdc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="在你使用视频应用账号分享功能之前，请阅读使用规则："
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="1.开启自助登录服务"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="2.开启悬浮窗权限"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="3.进入对应登录页面"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TextView
            android:text="4.点击悬浮窗"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <RadioButton
            android:id="@+id/radioButton"
            android:layout_marginStart="17dp"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#555"
            android:text="关闭电视播放器" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radioButton1"
                android:checked="false"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#555"
                android:text="关闭电视播放器" />
            <TextView
                android:id="@+id/autoLogin_help"
                android:gravity="end"
                android:layout_marginStart="20dp"
                android:text="查看详细使用帮助"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <Button
                android:id="@+id/negativeButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/buttonback04"
                android:text="取消"
                android:textColor="#E65757"
                android:textSize="16sp"
                android:gravity="center" />

            <Button
                android:id="@+id/positiveButton"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/buttonback04"
                android:gravity="center"
                android:text="确定"
                android:textColor="#E65757"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>-->
